--- a/pizza.html
+++ b/pizza.html
@@ -10,7 +10,6 @@
 </head>
 
 <body>
-
 <header>
     <nav>
         <ul>
@@ -70,7 +69,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price" data-value="90">
+            <div class="item-price" data-value="90" id="p_1">
                 <div class="item-text">90 lei</div>
                 <div class="item-ico">
                     <i class="fas fa-cart-arrow-down"></i>
@@ -84,7 +83,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price" data-value="80">
+            <div class="item-price" data-value="80" id="p_2">
                 <div class="item-text">80 lei</div>
                 <div class="item-ico"><i class="fas fa-cart-arrow-down"></i></div>
             </div>
@@ -96,7 +95,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-1x"></i></div>
             </div>
-            <div class="item-price">
+            <div class="item-price" data-value="70" id="p_3">
                 <div class="item-text">70 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
@@ -109,7 +108,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
+            <div class="item-price" data-value="75" id="p_4">
                 <div class="item-text">75 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
@@ -122,7 +121,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
+            <div class="item-price" data-value="65" id="p_5">
                 <div class="item-text">65 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
@@ -135,7 +134,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-1x"></i></div>
             </div>
-            <div class="item-price">
+            <div class="item-price" data-value="90" id="p_6">
                 <div class="item-text">90 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
@@ -148,7 +147,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
+            <div class="item-price" data-value="65" id="p_7">
                 <div class="item-text">65 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
@@ -161,7 +160,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
+            <div class="item-price" data-value="95" id="p_8">
                 <div class="item-text">95 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
@@ -174,8 +173,8 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
-                <div class="item-text">79 lei</div>
+            <div class="item-price" data-value="79" id="p_10">
+                <div class="item-text" data-value="79" id="p_9">79 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
             </div>
@@ -187,7 +186,7 @@
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-info-circle fa-2x"></i></div>
             </div>
-            <div class="item-price">
+            <div class="item-price" data-value="99" id="p_11">
                 <div class="item-text">99 lei</div>
                 <div class="item-ico" title="Barbeque, ketchup souce, mayonnaise..."><i
                         class="fas fa-cart-arrow-down"></i></div>
