--- a/events.html
+++ b/events.html
@@ -46,6 +46,7 @@
 </header>
 
 <section id="events">
+    <h2>Our events</h2>
     <div data-role="accordion" data-one-frame="true" data-show-active="true">
         <div class="frame active">
             <div class="heading">Corporative Party</div>
